fix: spacing element in vertical content

--- a/editor-components/pricing-table/pricing-table10/pricing-table10.module.scss
+++ b/editor-components/pricing-table/pricing-table10/pricing-table10.module.scss
@@ -18,7 +18,7 @@
             .subtitle,
             .title,
             .description {
-                content: "";
+                margin-bottom: 0 !important;
             }
 
             .buttons {
